Article action visibility fix
Related to #48

--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ textarea {
 	left: 650px;
 }
 
-.ArticleWithActions .ArticleActions > .ActionButton {
+.ArticleWithActions .ArticleActions .ActionButton {
 	display: inline-block;
 	margin-bottom: 8px;
 }
